--- a/.gitignore
+++ b/.gitignore
@@ -30,15 +30,9 @@ logo_text_white.pdf
 logo_notext_white.png
 
 # Quarto output files
-template-computo-R.html
-template-computo-R.pdf
-template-computo-python.html
-template-computo-python.pdf
-template-computo-python.ipynb
-template-computo-python.tex
-template-computo-julia.html
-template-computo-julia.pdf
-template-computo-julia.tex
+*.html
+*.pdf
+*.tex
 
 # Latex compilation files
 *.aux
